@@ -26,7 +26,7 @@ FORCE_TLS=false
 #     liberally matching both hyphen wildcards, canonical names
 #     associated with IP addresses, and subjectAltName extensions.
 #     This has been the default since GT 4.2
-NAME_COMPATIBILITY=HYBRID
+NAME_COMPATIBILITY=STRICT_RFC2818
 # OpenSSL Cipher List. This is an preference-ordered list of OpenSSL cipher
 # names. 
 CIPHERS=HIGH
